@@ -4,100 +4,114 @@ import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
 import crawler.Crawler;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Test;
+import dto.ParsedInputArguments;
+import org.junit.jupiter.api.*;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.InetSocketAddress;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.Collections;
-
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import java.nio.file.*;
+import java.util.Set;
+import static org.junit.jupiter.api.Assertions.*;
 
 class IntegrationTest {
     private static HttpServer server;
-    private static final int PORT = 3000;
     private static String baseUrl;
 
     @BeforeAll
-    static void setUp() throws Exception {
-        server = HttpServer.create(new InetSocketAddress(PORT), 0);
-
-        server.createContext("/", new HttpHandler() {
-            @Override
-            public void handle(HttpExchange exchange) throws IOException {
-                String response = "<html><head><title>Test</title></head>"
-                        + "<body><h1>Header</h1>"
-                        + "<a href=\"/page2\">Page 2</a>"
-                        + "</body></html>";
-                if ("HEAD".equalsIgnoreCase(exchange.getRequestMethod())) {
-                    exchange.sendResponseHeaders(200, -1);
-                } else {
-                    exchange.sendResponseHeaders(200, response.getBytes().length);
-                    try (OutputStream os = exchange.getResponseBody()){
-                        os.write(response.getBytes());
-                    }
-                }
-            }
-        });
-
-        server.createContext("/page2", new HttpHandler() {
-            @Override
-            public void handle(HttpExchange exchange) throws IOException {
-                String response = "<html><head><title>Page2</title></head>"
-                        + "<body><h2>Second Header</h2>"
-                        + "<a href=\"/\">Back</a>"
-                        + "</body></html>";
-                if ("HEAD".equalsIgnoreCase(exchange.getRequestMethod())) {
-                    exchange.sendResponseHeaders(200, -1);
-                } else {
-                    exchange.sendResponseHeaders(200, response.getBytes().length);
-                    try (OutputStream os = exchange.getResponseBody()){
-                        os.write(response.getBytes());
-                    }
-                }
-            }
-        });
+    static void setUp() throws IOException {
+        server = HttpServer.create(new InetSocketAddress(0), 0);
+        int port = server.getAddress().getPort();
+        baseUrl = "http://localhost:" + port;
+        registerContext("/",
+                "<html><body><h1>Header</h1>"
+                        + "<a href=\"/page2\">Page 2</a></body></html>");
+        registerContext("/page2",
+                "<html><body><h2>Second Header</h2>"
+                        + "<a href=\"/\">Back</a></body></html>");
 
         server.setExecutor(null);
         server.start();
-        baseUrl = "http://localhost:" + PORT;
     }
 
     @AfterAll
-    static void tearDown() throws Exception {
+    static void tearDown() throws IOException {
         server.stop(0);
-        Files.deleteIfExists(Paths.get("reports/report.md"));
+        Files.deleteIfExists(Paths.get("report/report.md"));
     }
 
     @Test
-    void testCrawlerIntegration() throws IOException {
-        Crawler crawler = new Crawler(2, Collections.singleton("localhost"), baseUrl);
+    void testCrawlerIntegrationValidSiteProducesReport() throws IOException {
+        ParsedInputArguments input = getInputArguments(baseUrl, 2, Set.of("localhost"));
+        Crawler crawler = new Crawler(input);
         crawler.startCrawl();
 
-        String content = new String(Files.readAllBytes(Paths.get("report/report.md")));
+        Path reportPath = Paths.get("report", "report.md");
+        assertTrue(Files.exists(reportPath), "Report file should be created");
 
-        assertTrue(content.contains("Header"), "Markdown should contain the H1 header");
-        assertTrue(content.contains("Second Header"), "Markdown should contain the H2 header from page2");
-        assertTrue(content.contains("link to <" + baseUrl + "/>"), "Markdown should log a link to the root page");
-        assertTrue(content.contains("link to <" + baseUrl + "/page2>"), "Markdown should log a link to page2");
+        String content = Files.readString(reportPath);
+        assertTrue(content.contains("Header"), "Should contain H1 header");
+        assertTrue(content.contains("Second Header"), "Should contain H2 header");
+        assertTrue(content.contains("link to: <a>" + baseUrl + "</a>"),
+                "Should log link to root page");
+        assertTrue(content.contains("link to: <a href=\"/page2\">Page 2</a>"),
+                "Should log link to page2");
     }
 
     @Test
-    void testCrawlerIntegrationInvalidLink() throws IOException {
-        Crawler crawler = new Crawler(2, Collections.singleton("localhost"), baseUrl + ".jar");
+    void testCrawlerIntegrationInvalidLinkBrokenLink() throws IOException {
+        ParsedInputArguments input = getInputArguments(baseUrl + ".jar", 1, Set.of("localhost"));
+        Crawler crawler = new Crawler(input);
         crawler.startCrawl();
-        assertFalse(Files.exists(Paths.get("reports/reports.md")));
+
+        Path reportPath = Paths.get("report", "report.md");
+        assertTrue(Files.exists(reportPath), "Report should still be created");
+        String content = Files.readString(reportPath);
+        assertTrue(content.contains("broken link <a>" + baseUrl + ".jar" + "</a>"));
     }
 
     @Test
-    void testCrawlerIntegrationInvalidDomain() throws IOException {
-        Crawler crawler = new Crawler(2, Collections.singleton("localhost"), "http://localhorst:" + PORT);
+    void testCrawlerIntegrationInvalidDomainBrokenLink() throws IOException {
+        ParsedInputArguments input = getInputArguments(baseUrl, 1, Set.of("foo.com"));
+        Crawler crawler = new Crawler(input);
         crawler.startCrawl();
-        assertFalse(Files.exists(Paths.get("reports/reports.md")));
+
+        Path reportPath = Paths.get("report", "report.md");
+        assertTrue(Files.exists(reportPath), "Report should still be created");
+        String content = Files.readString(reportPath);
+        assertTrue(content.contains("broken link <a>" + baseUrl + "</a>"));
+    }
+
+    private ParsedInputArguments getInputArguments(String startUrl, int maxDepth, Set<String> allowedDomains) {
+        ParsedInputArguments input = new ParsedInputArguments();
+        input.setStartUrl(startUrl);
+        input.setMaxDepth(maxDepth);
+        input.setAllowedDomains(allowedDomains);
+        return input;
+    }
+
+    private static void registerContext(String path, String html) {
+        server.createContext(path, new HtmlHandler(html));
+    }
+
+    /**
+     * A tiny handler that replies 200 to HEAD, and serves the given HTML on GET.
+     * Created with ChatGPT
+     */
+    private static class HtmlHandler implements HttpHandler {
+        private final byte[] body;
+        HtmlHandler(String html) {
+            this.body = html.getBytes();
+        }
+        @Override
+        public void handle(HttpExchange exchange) throws IOException {
+            if ("HEAD".equalsIgnoreCase(exchange.getRequestMethod())) {
+                exchange.sendResponseHeaders(200, -1);
+            } else {
+                exchange.sendResponseHeaders(200, body.length);
+                try (OutputStream os = exchange.getResponseBody()) {
+                    os.write(body);
+                }
+            }
+        }
     }
 }
